test_regress/t/t_interface_wire_bad_param.out
%Error: t/t_interface_wire_bad_param.v:19:19: Operator ASSIGNW expected non-interface on Assign RHS but 'a' is an interface.
                                            : ... note: In instance 't'
   19 |   wire wbad = sub.a;
      |                   ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
